init GetDeletedRooms
