# pkg/api/server_settings.go
@@ -29,4 +29,7 @@ type ServerSettings interface {
 	// @tg http-headers=token|Token
 	// @tg summary=`CreateRoom`
 	CreateRoom(ctx context.Context, token string, createRoom types.CreateRoomRequest) (err error)
+	// @tg http-headers=token|Token
+	// @tg summary=`CreateRoom`
+	GetDeletedRooms(ctx context.Context, token string, ids []types.GetDeletedRooms) (deletedIds []types.GetDeletedRooms, err error)
 }
